# alterx

./: Example-Json.md  Example-html.md  Example-json.md  Example-toml.md  Example-xml.md  Example-yaml.md  README.md  pyproject.toml  test6.xml
.github/workflows/: build.yml  publish.yml
alterx/: app.py  findskel.py  scantree.py  utils.py  xml.py
alterx/html/: __init__.py
alterx/json/: __init__.py  __main__.py
alterx/prev/: __init__.py  __main__.py  _stdin.py  html.py  htmlet.py  json.py  links.py  main.py  process.py  save_links.py  xml.py  yaml.py
alterx/prev/plugins/: -links.py  check_file_links.py
alterx/toml/: __init__.py  __main__.py
alterx/xml/: __init__.py
alterx/yaml/: __main__.py
old/: Makefile  alterx.aux.py  alterx.src.py  collect.py  domTighten.py  domWriteXML.py  dosGlob2RE.py  favrdf.py  links.py  rmbase.py  stripws.py  tidy.py
old/.build/: alterx.src
tests/: run_tests_with_coverage.sh  test_extra.py  test_html.py  test_json.py  test_run.py  test_toml.py  test_xml.py  test_yaml.py
